# auto-release-tool

./: main.py  pyproject.toml
src/auto_release_tool/: __init__.py  main.py
src/auto_release_tool/data/: __init__.py  step.py  step_result.py
src/auto_release_tool/tools/: __init__.py  error_manager.py  process_manager.py  version_manager.py
